fix(#54): If the preview message is too long, the text will be cropped

--- a/services/files/front/components/chat-room-button/chat-room-button.css
+++ b/services/files/front/components/chat-room-button/chat-room-button.css
@@ -41,5 +41,9 @@
 
 #room-preview {
     max-width: 220px;
-    overflow: clip;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
